output/sushimiso_dualmodel_1round_p4/foundry_validation/F-001_Batched_ETH_commitments_can_reuse_one_m/forge_stdout_attempt1.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xd9e1cE17f2641f24aE83637ab66a2cca9C378B9F". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xd9e1cE17f2641f24aE83637ab66a2cca9C378B9F". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:45:45:
   |
45 |     address private constant SUSHI_ROUTER = 0xd9e1cE17f2641F24aE83637ab66a2cca9C378B9F;
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

